fix modal and card overflow

--- a/app/client/css/main.styl
+++ b/app/client/css/main.styl
@@ -114,6 +114,10 @@ th.tablesorter-header
 th.sorter-false
   cursor: default
 
+// Custom materialize
+.card
+  overflow: visible
+
 // Footer
 #footer
   min-height: 5em
